# extends-rs

./: Cargo.toml  README.md
src/: lib.rs
src/extends/: all_extends.rs  mod.rs  struct_extends.rs
src/pestcf/: struct_centent.pest
