[package]
name = "extends-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true
[dependencies]
syn = { version = "1.0.84", features=["full", "fold", "printing"] }
quote ="1.0.14"
proc-macro2 = "1.0"
extends-rs={path="extends-rs"}