[package]
name = "extends-rs"
version = "0.1.4"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "rust extends impl  a macro attr"
documentation = "https://docs.rs/extends-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true
[dependencies]
syn = { version = "1.0.84", features=["full", "fold", "printing"] }
quote ="1.0.14"
proc-macro2 = "1.0"
substring="1.4.5"
pest = "2.1.3"
pest_derive = "2.1.0"